jdk 11 first try on tests